feat: add public SSH key

--- a/.mise.toml
+++ b/.mise.toml
@@ -1,9 +1,16 @@
 [tasks.build]
 description = "Build the custom Diet Pi image"
 run = '''
+# Load local SSH public key
+export DIETPI_SSH_PUBKEY=$(cat ~/.ssh/id_rsa.pub)
+
 docker run --rm --privileged \
     -v /dev:/dev \
     -v ${PWD}:/build \
+    -e WIFI_SSID \
+    -e WIFI_PASSWORD \
+    -e DIETPI_GLOBAL_PASSWORD \
+    -e DIETPI_SSH_PUBKEY \
     mkaczanowski/packer-builder-arm:latest \
     build -var-file=variables.pkrvars.hcl .
 '''
